[Gtk] Combo boxes should be arrow-out-of-able similar to list boxes when caret-browsing is enabled. https://bugs.webkit.org/show_bug.cgi?id=76796

Patch by Brian Holt <brian.holt@samsung.com> on 2013-04-11
Reviewed by Chris Fleizach.

Source/WebCore:

When using caret-browsing with the right and left arrows, the
behaviour of menuLists should be the same as listBoxes. This means
not default-handling the event and passing it up the stack instead.

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::menuListDefaultEventHandler):

Tools:

Make the Gtk window for the DRT a toplevel so that it gets the
focus from the window manager when the test starts.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(main):

LayoutTests:

Adding a new test to verify that it is possible to arrow out of
combo boxes when caret browsing is enabled. Updated failing tests
to reflect changed accessibility events in the DRT.

* platform/gtk/accessibility/aria-slider-required-attributes-expected.txt: Updated.
* platform/gtk/accessibility/caret-browsing-select-focus-expected.txt: Added.
* platform/gtk/accessibility/caret-browsing-select-focus.html: Added.
* platform/gtk/accessibility/combo-box-collapsed-selection-changed-expected.txt: Updated.

Canonical link: https://commits.webkit.org/132823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148210 268f45cc-cd09-0410-ab3c-d52691b4dbfc